Test_Java/A02_StaticTest.java
class FreeClaas{
    static void sayHello(){
        System.out.println("say Hello");
    }
}
public class A02_StaticTest
{
    public static void main(String arg[])
    {
        // FreeClaas kkk = new FreeClaas(); 
        // FreeClaas.kkk.sayHello(); //error
    }
}